Fixed clipboard propagation loop bug

BUG: 362596